--- a/README
+++ b/README
@@ -10,6 +10,12 @@ call as I would have (and actually did) in C.  As a
 result, the tunnel must poll for traffic :'-(  So if I
 missed a Java trick here, *please* let me know.
 
+Version 0.3.1 fixes a small problem, namely that the
+6bed4 application could not go away because it was
+too tightly coupled to the tunnel.  The application
+and (background) VpnService are now split.  In other
+words, it is now worth a try to access IPv6 websites.
+
 Version 0.3 actually passes information between the
 tunnel and its usage base, albeit from the assumptions
 that the IPv4 address is fixed and (not wholy reliable
