--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="overtake_default_route_text">Send all IPv6 through 6bed4</string>
     <string name="enable_button_text">Enable the 6bed4 tunnel</string>
     <string name="advanced_settings">Advanced Settings</string>
+    <string name="start_vpn">Start VPN</string>
+    <string name="stop_vpn">Stop from Notification Bar</string>
+    <string name="action_settings">Settings</string>
 </resources>
